# bgg

./: .clang-format  .dockerignore  .gitignore  .gitmodules  ActionRepresentation.cpp  ActionRepresentation.h  Agent.h  AgentReinforce.cpp  AgentReinforce.h  Arena.cpp  Arena.h  Board.cpp  Board.h  CMakeLists.txt  Coach.cpp  Coach.h  Dockerfile  Game.cpp  Game.h  GameDeclarations.cpp  GameDeclarations.h  GameState.cpp  GameState.h  MCTS.cpp  MCTS.h  NeuralNetwork.cpp  NeuralNetwork.h  Piece.cpp  Piece.h  README.md  RandomSelector.cpp  RandomSelector.h  StateRepresentation.h  StrategoLogic.cpp  StrategoLogic.h  main.cpp  torch_utils.cpp  torch_utils.h  utils.cpp  utils.h
alphazeroPP/: CMakeLists.txt
alphazeroPP/cppsrc/agent/: AgentReinforce.h
alphazeroPP/cppsrc/board/: Move.h
alphazeroPP/cppsrc/game/: State.h
alphazeroPP/cppsrc/mcts/: MCTS.cpp
alphazeroPP/cppsrc/nn/model/: NeuralNet.cpp
alphazeroPP/cppsrc/nn/model/modules/: Convolutional.cpp  Convolutional.h  FullyConnected.cpp
alphazeroPP/cppsrc/nn/training/: Coach.cpp  Coach.h
alphazeroPP/cppsrc/utils/: utils.h
alphazeroPP/include/azpp/: agent.h  azpp.h  board.h  nn.h  utils.h
alphazeroPP/include/azpp/agent/: Agent.h  AgentAlphazero.h  AgentReinforce.h
alphazeroPP/include/azpp/board/: Board.h  Move.h  Piece.h  Position.h
alphazeroPP/include/azpp/game/: Arena.h  Game.h  State.h
alphazeroPP/include/azpp/logic/: Logic.h
alphazeroPP/include/azpp/mcts/: MCTS.h
alphazeroPP/include/azpp/nn/alphazero/: AgentAlphazero.h
alphazeroPP/include/azpp/nn/model/: NeuralNet.h
alphazeroPP/include/azpp/nn/representation/: Action.h  Representer.h
alphazeroPP/include/azpp/nn/training/: Coach.h
alphazeroPP/include/azpp/utils/: logging_macros.h  permutations.h  prime_list.h  torch_utils.h  utils.h
aze/: CMakeLists.txt
aze/cppsrc/mcts/: MCTS.cpp
aze/cppsrc/nn/model/: NeuralNet.cpp
aze/cppsrc/nn/training/: Coach.cpp
aze/include/aze/: aze.h
aze/include/aze/agent/: Agent.h  AgentAlphazero.h  AgentReinforce.h
aze/include/aze/board/: Board.h  Move.h  Piece.h  Position.h
aze/include/aze/game/: Arena.h  Defs.h  Game.h  State.h
aze/include/aze/logic/: Logic.h
aze/include/aze/mcts/: MCTS.h
aze/include/aze/utils/: permutations.h  utils.h
azpp/: CMakeLists.txt  main.cpp
azpp/agent/: Agent.h  AgentAlphazero.h  AgentReinforce.h
azpp/board/: Board.h  BoardStratego.cpp  BoardStratego.h  Move.h  Piece.h  Position.h
azpp/game/: Game.h  GameState.h  GameStateStratego.cpp  GameStateStratego.h  GameStratego.h
azpp/logic/: BattleMatrix.cpp  BattleMatrix.h  Logic.h  LogicStratego.cpp  LogicStratego.h
azpp/mcts/: MCTS.cpp
azpp/nn/alphazero/: AgentAlphazero.h  MCTS.cpp  MCTS.h
azpp/nn/model/: Action.h  ActionRepresenter.h  ActionRepresenterStratego.cpp  ActionRepresenterStratego.h  NeuralNet.cpp  NeuralNet.h
azpp/nn/model/modules/: AlphazeroInterface.h  Convolutional.cpp  Convolutional.h  FullyConnected.cpp  FullyConnected.h
azpp/nn/model/representation/: ActionRepresenter.h
azpp/nn/training/: Coach.cpp  Coach.h  StateRepresentation.h
azpp/utils/: permutations.h  prime_list.h  torch_utils.h  utils.cpp  utils.h
boarderline/: CMakeLists.txt  main.cpp
boarderline/agent/: Agent.h  AgentReinforce.h
boarderline/board/: Board.h  BoardStratego.cpp  BoardStratego.h  Move.h  Piece.h  PieceStratego.h  Position.h
boarderline/game/: Arena.h  Game.h  GameState.h  GameStateStratego.h  GameUtilsStratego.h
boarderline/logic/: Logic.h  LogicStratego.cpp  LogicStratego.h
boarderline/nn/alphazero/: MCTS.cpp  MCTS.h
boarderline/nn/model/: Action.h  ActionRepresenter.h  ActionRepresenterStratego.cpp  ActionRepresenterStratego.h  NeuralNet.cpp
boarderline/src/agent/: Agent.cpp  Agent.h  AgentReinforce.cpp  AgentReinforce.h
boarderline/src/board/: Board.cpp  Board.h  BoardStratego.cpp  BoardStratego.h  Move.h  Piece.cpp  Piece.h  PieceStratego.h  Position.h
boarderline/src/game/: Game.cpp  Game.h  GameDeclarations.h  GameState.cpp  GameState.h  GameStateStratego.cpp  GameStateStratego.h  GameUtilsStratego.h
boarderline/src/logic/: StrategoLogic.cpp  StrategoLogic.h
boarderline/src/nn/alphazero/: A0agent.cpp  A0agent.h  ActionRepresentation.cpp  ActionRepresentation.h  AgentAlphazero.cpp  AgentAlphazero.h  MCTS.cpp  MCTS.h
boarderline/src/nn/model/: Action.h  ActionRepresentation.cpp  ActionRepresentation.h  ActionRepresenter.h  ActionRepresenterStratego.cpp  ActionRepresenterStratego.h  NeuralNet.h  NeuralNetwork.cpp  NeuralNetwork.h
boarderline/src/nn/training/: Coach.cpp  Coach.h  StateRepresentation.h
boarderline/src/tqdm/: tqdm.h
boarderline/src/utils/: UniversallyUniqueId.h  utils.h
boarderline/utils/: UniversallyUniqueId.h  torch_utils.h  utils.h
include/: nn.h  (+7 more)
stratego/: CMakeLists.txt  main.cpp
stratego/board/: BoardStratego.cpp  BoardStratego.h  PieceStratego.h
stratego/game/: GameStateStratego.h  GameStratego.cpp  GameStratego.h  StateStratego.cpp  StateStratego.h
stratego/logic/: LogicStratego.cpp  LogicStratego.h
stratego/nn/model/modules/: AlphazeroStratego.h
stratego/nn/model/representation/: ActionRepresenterStratego.cpp  ActionRepresenterStratego.h  RepresenterStratego.cpp  RepresenterStratego.h
stratego/nn/representation/: RepresenterStratego.cpp  RepresenterStratego.h
stratego/nn/training/: Coach.cpp  Coach.h  StateRepresentation.h
stratego/utils/: prime_list.h
test/: BoardTest.cpp  BoardTest.h  CMakeLists.txt  MoveTest.cpp  MoveTest.h  PieceTest.cpp  PieceTest.h  PositionTest.cpp  PositionTest.h  StateTest.cpp  StateTest.h  main_test.cpp
test/aze_library_tests/: BoardTest.cpp  BoardTest.h  MoveTest.cpp  MoveTest.h  PieceTest.cpp  PieceTest.h  PositionTest.cpp  PositionTest.h  StateTest.cpp  StateTest.h  main_test.cpp
test/azpp_library_tests/: BoardTest.cpp  BoardTest.h  MoveTest.cpp  MoveTest.h  PieceTest.h  PositionTest.cpp  PositionTest.h  StateTest.cpp  StateTest.h  main_test.cpp
test/stratego_tests/: LogicStrategoTest.cpp  LogicStrategoTest.h  RepresenterStrategoTest.cpp  RepresenterStrategoTest.h  StateStrategoTest.cpp  StateStrategoTest.h
(+79 files in other folders)
